[Cleanup] replace .collect() with .tolist()
Change-Id: I9551f7ccb15dea1a0de79a491e702bda590c6729