@@ -21,7 +21,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.eclipse.emf.common.util.EList;
@@ -395,7 +394,7 @@ public class FBEndpointFinder {
 
 		// trace find right interface from the interface stack
 		for (final IInterfaceElement structMem : ((StructManipulator) fb).getStructType().getMemberVariables().stream()
-				.filter(mem -> fb.getInterfaceElement(mem.getName()) != null).collect(Collectors.toList())) {
+				.filter(mem -> fb.getInterfaceElement(mem.getName()) != null).toList()) {
 			final IInterfaceElement realInt = fb.getInterfaceElement(structMem.getName());
 
 			Deque<String> subStack;
